css/import.css
::-webkit-scrollbar {
    width: 10px;
    background: #EEE;
}

::-webkit-scrollbar-thumb {
    background-color: #AAA;
    border: 2px solid #EEE;
    border-radius: 5px;
}

[v-cloak] { display: none }

#authenticator {
    width: 600px;
    position: relative;
    margin: 0 auto;
}

.import_tab {
    text-align: center;
    font-size: 0;
}

.import_tab input {
    display: none;
}

.import_tab label {
    width: 250px;
    height: 50px;
    line-height: 50px;
    font-size: 18px;
    text-align: center;
    display: inline-block;
    margin: 20px;
    cursor: pointer;
    border-radius: 2px;
}

.import_tab input:checked + label,
.import_tab label:hover {
    background: #eee;
}

.import_file {
    text-align: center;
}

.import_file input {
    display: none;
}

button,
.import_file label {
    display: inline-block;
    width: 260px;
    height: 60px;
    line-height: 60px;
    border: #CCC 1px solid;
    background: white;
    border-radius: 2px;
    position: relative;
    text-align: center;
    font-size: 16px;
    color: gray;
    cursor: pointer;
    outline: none;
}

button:hover,
.import_file label:hover {
    color: black;
}

.import_encrypted {
    margin-bottom: 20px;
}

.import_encrypted input {
    margin-left: 0;
}

.import_code {
    float: left;
    margin-left: 30px;
    margin-right: 40px;
}

.import_code textarea {
    width: 250px;
    height: 400px;
    padding: 10px;
    outline: none;
    resize: none;
    box-sizing: border-box;
}

.import_passphrase input {
    padding: 10px;
    margin-bottom: 20px;
    width: 250px;
    border: #CCC 1px solid;
    background: white;
    outline: none;
}

.error_password {
    font-size: 18px;
    color: gray;
    text-align: center;
}

